--- a/.github/workflows/ci-mssql.yml
+++ b/.github/workflows/ci-mssql.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   tests:
-    name: PHP ${{ matrix.php-version }} mssql ${{ matrix.mssql-version }} on ${{ matrix.os-version }}
+    name: PHP${{ matrix.php-version }} MSSQL${{ matrix.mssql-version }} on ${{ matrix.os-version }}
     if: ${{ !contains(github.event.head_commit.message, 'skip ci') }}
 
     runs-on: ${{ matrix.os-version }}
@@ -24,6 +24,7 @@ jobs:
       matrix:
         os-version:
           - ubuntu-20.04
+          - ubuntu-22.04
 
         php-version:
           - "8.0"
@@ -46,8 +47,7 @@ jobs:
           options: --name=mssql --health-cmd="/opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'YourStrong!Passw0rd' -Q 'SELECT 1'" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Create MSSQL Database
         run: docker exec -i mssql /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'YourStrong!Passw0rd' -Q 'CREATE DATABASE yiitest'
