--- a/.github/workflows/ci-mysql.yml
+++ b/.github/workflows/ci-mysql.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   tests:
-    name: PHP ${{ matrix.php-version }} mysql ${{ matrix.mysql-version }} on ${{ matrix.os-version }}
+    name: PHP${{ matrix.php-version }} MySQL${{ matrix.mysql-version }} on ${{ matrix.os-version }}
     if: ${{ !contains(github.event.head_commit.message, 'skip ci') }}
 
     runs-on: ${{ matrix.os-version }}
@@ -24,6 +24,7 @@ jobs:
       matrix:
         os-version:
           - ubuntu-20.04
+          - ubuntu-22.04
 
         php-version:
           - "8.0"
