--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,8 +82,13 @@ jobs:
           composer self-update -vvv
           composer install $COMPOSER_INSTALL_FLAGS
 
-      - run: composer require --dev phpunit/phpunit:10.0.x-dev
+      - name: Install PHPUnit10 on PHP8.2
         if: ${{ matrix.php-version == '8.2' }}
+        run: |
+          rm -rf vendor/
+          rm -f composer.lock
+          composer require --dev phpunit/phpunit:10.0.x-dev
+          composer redo-install
 
       - run: git diff
 
