--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ env:
   COMPOSER_INSTALL_FLAGS: "--prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi"
 
 jobs:
-  matrix_tests:
+  matrix_general:
     name: PHP${{ matrix.php-version }} MySQL${{ matrix.mysql-version }} PgSQL${{ matrix.pgsql-version }} MSSQL${{ matrix.mssql-version }}
     if: ${{ !contains(github.event.head_commit.message, 'skip ci') }}
 
@@ -94,6 +94,176 @@ jobs:
 
       - name: PHPUnit
         run: vendor/bin/phpunit --verbose --colors=always
+
+
+
+  matrix_mssql:
+    name: PHP${{ matrix.php-version }} MSSQL${{ matrix.mssql-version }} on ${{ matrix.os-version }}
+    if: ${{ !contains(github.event.head_commit.message, 'skip ci') }}
+
+    runs-on: ${{ matrix.os-version }}
+
+    strategy:
+      matrix:
+        os-version:
+          - ubuntu-20.04
+          - ubuntu-22.04
+
+        php-version:
+          - "8.0"
+          - "8.1"
+          - "8.2"
+
+        mssql-version:
+          - "2019-latest"
+          - "2022-latest"
+
+    services:
+      mssql:
+        image: mcr.microsoft.com/mssql/server:${{ matrix.mssql-version }}
+        env:
+          SA_PASSWORD: YourStrong!Passw0rd
+          ACCEPT_EULA: Y
+          MSSQL_PID: Developer
+        ports:
+          - 1433:1433
+        options: --name=mssql --health-cmd="/opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'YourStrong!Passw0rd' -Q 'SELECT 1'" --health-interval=10s --health-timeout=5s --health-retries=3
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Create MSSQL Database
+        run: docker exec -i mssql /opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'YourStrong!Passw0rd' -Q 'CREATE DATABASE yiitest'
+
+      - name: Install PHP with extensions
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-version }}
+          tools: pecl
+          extensions: curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite, pdo_sqlsrv
+          ini-values: date.timezone='UTC'
+
+      - name: Install dependencies
+        run: |
+          rm -rf vendor/
+          rm -f composer.lock
+          composer self-update -vvv
+          composer install $COMPOSER_INSTALL_FLAGS
+
+      - name: PHPUnit
+        run: vendor/bin/phpunit --group mssql --colors=always
+
+
+
+  matrix_mysql:
+    name: PHP${{ matrix.php-version }} MySQL${{ matrix.mysql-version }} on ${{ matrix.os-version }}
+    if: ${{ !contains(github.event.head_commit.message, 'skip ci') }}
+
+    runs-on: ${{ matrix.os-version }}
+
+    strategy:
+      matrix:
+        os-version:
+          - ubuntu-20.04
+          - ubuntu-22.04
+
+        php-version:
+          - "8.0"
+          - "8.1"
+          - "8.2"
+
+        mysql-version:
+          - "5.7"
+          - "8.0"
+
+    services:
+      mysql:
+        image: mysql:${{ matrix.mysql-version }}
+        env:
+          MYSQL_ROOT_PASSWORD: root12345
+          MYSQL_DATABASE: test0db
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Install PHP with extensions
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-version }}
+          tools: pecl
+          extensions: curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite
+          ini-values: date.timezone='UTC'
+
+      - name: Install dependencies
+        run: |
+          rm -rf vendor/
+          rm -f composer.lock
+          composer self-update -vvv
+          composer install $COMPOSER_INSTALL_FLAGS
+
+      - name: PHPUnit
+        run: vendor/bin/phpunit --group mysql --colors=always
+
+
+
+  matrix_pgsql:
+    name: PHP${{ matrix.php-version }} PgSQL${{ matrix.pgsql-version }} on ${{ matrix.os-version }}
+    if: ${{ !contains(github.event.head_commit.message, 'skip ci') }}
+
+    runs-on: ${{ matrix.os-version }}
+
+    strategy:
+      matrix:
+        os-version:
+          - ubuntu-20.04
+          - ubuntu-22.04
+
+        php-version:
+          - "8.0"
+          - "8.1"
+          - "8.2"
+
+        pgsql-version:
+          - "14"
+          - "15"
+
+    services:
+      postgres:
+        image: postgres:${{ matrix.pgsql-version }}
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: yiitest
+        ports:
+          - 5432:5432
+        options: --name=postgres --health-cmd=pg_isready --health-interval=10s --health-timeout=5s --health-retries=3
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install PHP with extensions
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php-version }}
+          tools: pecl
+          extensions: curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite, pdo_pgsql
+          ini-values: date.timezone='UTC'
+
+      - name: Install dependencies
+        run: |
+          rm -rf vendor/
+          rm -f composer.lock
+          composer self-update -vvv
+          composer install $COMPOSER_INSTALL_FLAGS
+
+      - name: PHPUnit
+        run: vendor/bin/phpunit --group pgsql --colors=always
+
+
 
   container_tests:
     name: Ubuntu-20.04 PHP-8.0 MySQL-8.0
