--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "charescape/php-functions": "^1.3.0",
         "ezyang/htmlpurifier": "^4.16",
         "symfony/polyfill-php81": "^1.27",
+        "symfony/serializer": "^6.0",
         "ziiframework/composer": "^3.8.2"
     },
     "require-dev": {
