--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "ext-pdo": "*",
         "lib-pcre": "*",
         "cebe/markdown": "^1.2",
-        "charescape/php-functions": "^1.3.1",
+        "charescape/php-functions": "~1.3.1",
         "ezyang/htmlpurifier": "^4.16",
         "symfony/polyfill-php81": "^1.27",
         "symfony/serializer": "^6.0",
