--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   matrix_tests:
-    name: PHP${{ matrix.php-version }} MySQL${{ matrix.mysql-version }} PgSQL${{ matrix.pgsql-version }} MSSQL${{ matrix.mssql-version }}
+    name: PHP${{ matrix.php-version }} MySQL${{ matrix.mysql-version }} PgSQL${{ matrix.pgsql-version }} MSSQL${{ matrix.mssql-version }} on ${{ matrix.os-version }}
     if: ${{ !contains(github.event.head_commit.message, 'skip ci') }}
 
     runs-on: ${{ matrix.os-version }}
