--- a/.github/workflows/ci-pgsql.yml
+++ b/.github/workflows/ci-pgsql.yml
@@ -20,13 +20,12 @@ jobs:
     runs-on: ${{ matrix.os-version }}
 
     strategy:
+      fail-fast: false
       matrix:
         os-version:
-          - ubuntu-20.04
           - ubuntu-22.04
 
         php-version:
-          - "8.0"
           - "8.1"
           - "8.2"
 
